--- a/ultrasound.ipynb
+++ b/ultrasound.ipynb
@@ -54,7 +54,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "s = r'C:\\Users\\Vandana\\Downloads\\2nd sem\\SRISTI\\Project\\Kidney-Stone-Detection-IP-master\\Kidney-Stone-Detection-IP-master\\images'\n",
+    "s = r'C:\\Users\\Vandana\\Downloads\\2nd sem\\SRISTI\\Project\images'\n",
     "image_no = '\\sjcnsjkdc.png'\n",
     "s = s + image_no\n",
     "\n",
